Bug 169148 - Date picker in DOCX file has black background
Summary: Date picker in DOCX file has black background
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Content_Control
  Show dependency treegraph
 
Reported: 2025-10-30 11:00 UTC by Aron Budea
Modified: 2025-11-26 15:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample DOCX (21.98 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2025-10-30 11:00 UTC, Aron Budea
Details
Screenshot (37.27 KB, image/png)
2025-10-30 11:02 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2025-10-30 11:00:42 UTC
Created attachment 203607 [details]
Sample DOCX

Open the attached simple DOCX file with a single date picker, created in Word.

When opened in Writer, the background is black.

Interestingly, if the equivalent is inserted in an empty document in Writer via Form -> Content Controls -> Date Control, and the document is saved and reloaded, it looks OK.

Observed in 26.2.0.0.alpha0+ (5ab202100577563e8fcd66f032181452e94e2015) / Windows.
Earlier versions are OK.

This went bad in two steps. First, after the following commit, the whole date picker turned white
https://git.libreoffice.org/core/commit/878dd795378776253e6c49d58805a219e0b8c33e
author		Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jun 30 12:00:42 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Mon Jun 30 17:49:51 2025 +0200

"tdf#166842 do not use FillColor==COL_TRANSPARENT..."

Then the current behavior started with this commit:
https://git.libreoffice.org/core/commit/088a7c7c451321a800ca8d3523a18b6bb93239b7
author		Noel Grandin <noelgrandin@gmail.com>	Tue Sep 24 16:18:11 2024 +0200
committer	Noel Grandin <noelgrandin@gmail.com>	Mon Jul 21 10:49:25 2025 +0200

"remove alpha device from OutputDevice"

The first commit affected both Windows and Linux, but the second commit only changed the behavior on Windows. Finally, on Linux the issue got fixed with this commit, but Windows is still not okay:
https://git.libreoffice.org/core/commit/4bc08277e8fcfc37105f1427ca2f0d596d39eccd
author		Noel Grandin <noel.grandin@collabora.co.uk>	Fri Oct 17 15:11:59 2025 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	Sun Oct 19 12:13:39 2025 +0200

"fix DrawPolyPolygon alpha behaviour"
Comment 1 Aron Budea 2025-10-30 11:02:05 UTC
Created attachment 203608 [details]
Screenshot
Comment 2 Commit Notification 2025-11-26 15:20:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7d3bd39c5156caeb77fdb63a773640a2091165b4

tdf#169148 Date picker in DOCX file has black background

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.