tdf#169148 Date picker in DOCX file has black background

Change-Id: I14d339eae3076d0ab0ea79c0a095fa7d74552bd0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194621
Tested-by: Jenkins
Tested-by: Noel Grandin <noel.grandin@collabora.co.uk>
Code-Style: Noel Grandin <noel.grandin@collabora.co.uk>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>