sw/source/core/crsr/FormFieldButton.cxx
@@ -115,7 +115,7 @@ void FormFieldButton::Paint(vcl::RenderContext& rRenderContext, const tools::Rec
     const tools::Rectangle aFrameRect(tools::Rectangle(aPos, aSize));
     rRenderContext.SetLineColor(aLineColor);
     if (rRenderContext.HasAlpha())
-        rRenderContext.SetFillColor(COL_TRANSPARENT);
+        rRenderContext.SetFillColor();
     else
         rRenderContext.SetFillColor(COL_WHITE);
     rRenderContext.DrawRect(aFrameRect);
